Bug 158971 - Assertion failed when saving a specific DOCX
Summary: Assertion failed when saving a specific DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: Crash-Assert DOCX-Content_Control DOCX-Section
  Show dependency treegraph
 
Reported: 2024-01-02 11:11 UTC by Mike Kaganski
Modified: 2024-01-08 08:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
An SDT after a section break (1.16 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-01-02 11:11 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-01-02 11:11:15 UTC
Created attachment 191693 [details]
An SDT after a section break

Opening the attached document in a debug build containing commit f09420fa189be5165b0311083ba127073500a121, and saving as DOCX, fails an assertion (and aborts/crashes).
Comment 1 Mike Kaganski 2024-01-02 12:13:09 UTC
https://gerrit.libreoffice.org/c/core/+/161539
Comment 2 Commit Notification 2024-01-03 02:17:14 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/960e37af28807ed1b376e26c4504ab755a81dfd5

tdf#158971: Only copy directly-set properties

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-08 08:50:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/1e8e2134c66b2875aeacddfc9c68fdd584f74892

tdf#158971: Only copy directly-set properties

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.