tdf#158971: Only copy directly-set properties

Commit f09420fa189be5165b0311083ba127073500a121 (tdf#158855: Make sure
to not add extra paragraph after a table in a section, 2023-12-25) had
implemented copying all attributes of a paragraph using copyAllProps.
But the function didn't check the states of properties, so copied also
default values of properties, making them direct properties of the
paragraph. Due to tdf#158972, that caused an assertion when saving,
and the main problem was a set of direct properties in the paragraph.

Fix that by checking the properties states. Also make sure to work with
paragraphs, rather than with ranges, which treats any properties set on
paragraph level as default-state on the run level.

Change-Id: I7cd9c7fbb9313d666c46be201913f0223a6b4f5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161539
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161580